--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .ode-SimpleMockFormPhonePortrait {
-    background: url(https://builder.niotron.com/static/images/samsung_galaxy_note_5_portrait.png) !important;
+    background: url(https://raw.githubusercontent.com/cttricks/AI-Custom-Mockup/main/samsung_galaxy_note_5_portrait.png) !important;
     padding: 60px 15px 53px 15px !important;
 	background-repeat: no-repeat !important;
     background-position: right top !important;
